--- a/docroot/bugpile-static-bugreport-guidelines.org
+++ b/docroot/bugpile-static-bugreport-guidelines.org
@@ -1,34 +1,32 @@
-#+OPTIONS:    H:3 num:nil toc:2 \n:nil @:t ::t |:t ^:{} -:t f:t *:t TeX:t LaTeX:t skip:nil d:(HIDE) tags:not-in-toc
-#+STARTUP:    align fold nodlcheck hidestars oddeven lognotestate hideblocks
+#+OPTIONS:    H:4 num:nil toc:3 \n:nil @:t ::t |:t ^:{} -:t f:t *:t TeX:t LaTeX:t skip:nil d:(HIDE) tags:not-in-toc
+#+STARTUP:    align fold nodlcheck oddeven lognotestate hideblocks
 #+SEQ_TODO:   TODO(t) INPROGRESS(i) WAITING(w@) | DONE(d) CANCELED(c@)
 #+TAGS:       Write(w) Update(u) Fix(f) Check(c) noexport(n)
-#+TITLE:      Bugpile - Guidelines for Bug Reporting
+#+TITLE:      Bugpile - Guidelines for Bugreporting
 #+AUTHOR:     Thorsten Jolitz
 #+EMAIL:      tj[at]data-driven[dot]de
 #+LANGUAGE:   en
 #+STYLE:      <style type="text/css">#outline-container-introduction{ clear:both; }</style>
-# #+LINK_UP:  http://orgmode.org/worg/org-faq.html
+#+LINK_UP:    index.html
 #+LINK_HOME:  http://orgmode.org/worg/
 #+EXPORT_EXCLUDE_TAGS: noexport
-
 
 # #+name: banner
 # #+begin_html
 #   <div id="subtitle" style="float: center; text-align: center;">
 #   <p>
-#   Org Mode info-page for GNU's application to  <a href="http://www.google-melange.com/gsoc/homepage/google/gsoc2012">GSoC 2012</a>
+#   A Web-Framework based on <a href="http://orgmode.org/">Org-mode</a> and
+#                                 <a href="http://picolisp.com/5000/!wiki?home/">PicoLisp</a>
 #   </p>
 #   <p>
-#   <a
-#   href="http://www.google-melange.com/gsoc/homepage/google/gsoc2012"/>
-# <img src="../../images/gsoc/2012/beach-books-beer-60pc.png"  alt="Beach, Books
-#   and Beer"/>
+#   <a href="http://picolisp.com/5000/!wiki?home/">
+#   <img src="http://picolisp.com/5000/wiki/logo.png"/>
 #   </a>
 #   </p>
 #   </div>
 # #+end_html
 
-/About Bugtracker and good Bug-Reports/
+/About Bugtrackers and good Bugreporting/
 
 * About Bugtrackers
 
