Renamed iorg-model.el to iorg-logic.el. Added docstring for function iorg-logic-new-object. A few changes to the Org class files.

--- a/objects/classes/object-class.org
+++ b/objects/classes/object-class.org
@@ -1,6 +1,6 @@
 #+Title: The abstract class definition for 'object' 
 
-* TODO object                                                  :abstract:bar:
+* object                                                       :abstract:bar:
   :PROPERTIES:
   :iorg-super: root
   :iorg-headline_ALL: all todos text tags
