--- a/objects/classes/html-class.org
+++ b/objects/classes/html-class.org
@@ -1,6 +1,6 @@
 #+Title: The abstract class definition for 'html' 
 
-* TODO html                                                    :abstract:bar:
+*  html                                                    :abstract:bar:
   :PROPERTIES:
   :iorg-super: object
   :html-edit_ALL: link button    
