--- a/objects/classes/task-class.org
+++ b/objects/classes/task-class.org
@@ -1,15 +1,15 @@
-#+Title: The class definition for a 'Simple' object
+#+Title: The class definition for a 'task' 
 
 * TODO Simple                                                      :bar:
   :PROPERTIES:
   :iorg-super: html
-  :html-server-action:   http://localhost:8008/
+  :html-index-action:   http://localhost:8008/
   :html-edit-action:     http://localhost:8008/edit/
   :html-send-action:     http://localhost:8008/send/
   :html-reset-action:    http://localhost:8008/reset/
   :html-edit: link    
   :html-edit-value: Edit
-  :html-send-button: Send edits
+  :html-send-button: Submit
   :html-reset-button: Reset
   :END:
 
