--- a/objects/classes/html-class.org
+++ b/objects/classes/html-class.org
@@ -1,9 +1,21 @@
 #+Title: The abstract class definition for 'html' 
 
 *  html                                                    :abstract:bar:
+** class
   :PROPERTIES:
   :iorg-super: object
   :html-edit_ALL: link button    
+  :END:
+** instance
+  :PROPERTIES:
+  :html-index-action:   nil
+  :html-edit-action:    nil
+  :html-send-action:    nil
+  :html-reset-action:   nil
+  :html-edit: link    
+  :html-edit-value: Edit
+  :html-send-button: Send
+  :html-reset-button: Reset
   :END:
 
      
