--- a/objects/classes/object-class.org
+++ b/objects/classes/object-class.org
@@ -1,10 +1,14 @@
 #+Title: The abstract class definition for 'object' 
 
 * object                                                       :abstract:bar:
+** class
   :PROPERTIES:
   :iorg-super: root
-  :iorg-headline_ALL: all todos text tags
-  :iorg-headline: all
+  :iorg-headline_ALL: all todo text tag
   :END:
+** instance
+   :PROPERTIES:
+   :iorg-headline: all
+   :END:
 
      
