Org classes changed again in the light of Erics proposal to use file-local-variables for 'class attributes' (i.e. attributes that are constant for all instances/objects).

--- a/objects/classes/object-class.org
+++ b/objects/classes/object-class.org
@@ -1,6 +1,8 @@
 #+Title: The abstract class definition for 'object' 
 
 * object                                                       :abstract:bar:
+** class
+** instance
   :PROPERTIES:
   :iorg-super: root
   :iorg-id:  nil
