--- a/objects/classes/html-class.org
+++ b/objects/classes/html-class.org
@@ -1,19 +1,22 @@
 #+Title: The abstract class definition for 'html' 
 
 *  html                                                    :abstract:bar:
+** class
   :PROPERTIES:
   :iorg-super: object
   :html-edit_ALL: link button    
   :html-headline_forms_ALL: all notext todo text tag
-  :html-headline-forms: notext
   :html-index-action:   nil
   :html-edit-action:    nil
   :html-send-action:    nil
   :html-reset-action:   nil
+  :END:
+** instance
+  :PROPERTIES:
+  :html-headline-forms: notext
   :html-edit: link    
   :html-edit-value: Edit
   :html-send-button: Send
   :html-reset-button: Reset
   :END:
-
      
