First (untested) draft of iorg-logic-new-class.

--- a/objects/classes/task-class.org
+++ b/objects/classes/task-class.org
@@ -1,4 +1,4 @@
-#+Title: The class definition for a 'task' 
+#+Title: The class definition for 'task' 
 
 * TODO task                                                             :bar:
 ** class
