--- a/objects/classes/object-class.org
+++ b/objects/classes/object-class.org
@@ -1,6 +1,6 @@
 #+Title: The abstract class definition for 'object' 
 
-* object                                                       :abstract:bar: #
+* object                                                       :abstract:bar: 
   :PROPERTIES:
   :iorg-super: root
   :ID:       b035c285-0474-4e29-ae51-c2209e38029d
