bug fixed in iorg-logic--get-entry-properties-with-class-inheritance: put point on first entry in every iOrg class file visited before processing.

--- a/objects/top-obj.org
+++ b/objects/top-obj.org
@@ -23,3 +23,27 @@
   :top-bar_ALL: foo manchu
   :END:
   [2012-07-06 Fr 11:59]
+* TODO top
+  :PROPERTIES:
+  :object-foo: bar
+  :object-foo_ALL: bar code
+  :object-bar: foo
+  :middle-foo: bar
+  :middle-bar: foo
+  :top-foo:  bar
+  :top-bar:  foo
+  :top-bar_ALL: foo manchu
+  :END:
+  [2012-07-06 Fr 11:59]
+* TODO top
+  :PROPERTIES:
+  :object-foo: bar
+  :object-foo_ALL: bar code
+  :object-bar: foo
+  :middle-foo: bar
+  :middle-bar: foo
+  :top-foo:  bar
+  :top-bar:  foo
+  :top-bar_ALL: foo manchu
+  :END:
+  [2012-07-06 Fr 11:59]
