iorg-logic tested and several bugs and instabilities fixed. Seems to work quite reliably now. TODO: accumulate tags (and different property values for the same property) from all superclasses of a class hierarchy.

--- a/objects/classes/middle-class.org
+++ b/objects/classes/middle-class.org
@@ -6,5 +6,7 @@
   :middle-foo: bar
   :middle-bar: foo
   :iorg-super: object
+  :middle-class-C: extinct
+  :top-foo:  foo doo
   :END:
   [2012-07-06 Fr 11:57]
