--- a/objects/top-obj.org
+++ b/objects/top-obj.org
@@ -1,49 +1,74 @@
 #+Title: The objects file for class 'top'
+
 * TODO top
   :PROPERTIES:
   :object-foo: bar
-  :object-foo_ALL: bar code
   :object-bar: foo
   :middle-foo: bar
   :middle-bar: foo
   :top-foo:  bar
   :top-bar:  foo
-  :top-bar_ALL: foo manchu
+  :ID:       05c68c9f-38b1-4126-ab2a-35608e60933b
   :END:
   [2012-07-06 Fr 11:59]
+
+
 * TODO top
   :PROPERTIES:
   :object-foo: bar
-  :object-foo_ALL: bar code
+  :object-foo_ALL-C: bar code
+  :object-bar: foo
+  :middle-foo: bar
+  :middle-bar: foo
+  :middle-class-C: extinct
+  :top-foo:  bar
+  :top-bar:  foo
+  :top-bar_ALL-C: foo manchu
+  :END:
+  [2012-07-06 Fr 11:59]
+
+* TODO top
+  :PROPERTIES:
+  :object-foo: bar
+  :object-foo_ALL-C: bar code
+  :object-bar: foo
+  :middle-foo: bar
+  :middle-bar: foo
+  :middle-class-C: extinct
+  :top-foo:  bar
+  :top-bar:  foo
+  :top-bar_ALL-C: foo manchu
+  :END:
+  [2012-07-06 Fr 11:59]
+
+* TODO top
+  :PROPERTIES:
+  :object-foo: bar
   :object-bar: foo
   :middle-foo: bar
   :middle-bar: foo
   :top-foo:  bar
   :top-bar:  foo
-  :top-bar_ALL: foo manchu
+  :ID:       32b4b5da-3fd7-4666-879c-6f9f530e5906
   :END:
   [2012-07-06 Fr 11:59]
-* TODO top
+
+* Todo top
   :PROPERTIES:
   :object-foo: bar
-  :object-foo_ALL: bar code
   :object-bar: foo
   :middle-foo: bar
   :middle-bar: foo
   :top-foo:  bar
   :top-bar:  foo
-  :top-bar_ALL: foo manchu
+  :ID:       53e89526-f8d5-4e63-adb9-a4f7c04d3fcf
   :END:
   [2012-07-06 Fr 11:59]
-* TODO top
-  :PROPERTIES:
-  :object-foo: bar
-  :object-foo_ALL: bar code
-  :object-bar: foo
-  :middle-foo: bar
-  :middle-bar: foo
-  :top-foo:  bar
-  :top-bar:  foo
-  :top-bar_ALL: foo manchu
-  :END:
-  [2012-07-06 Fr 11:59]
+
+* File Local Variables (iOrg class properties)              :file_local_vars:
+  [2012-07-08 So 00:55]
+# Local Variables:
+# object-foo_ALL: "bar code"
+# middle-class: "extinct"
+# top-bar_ALL: "foo manchu"
+# End:
