--- a/view/edit-task/bugpile-edit-task-view.org
+++ b/view/edit-task/bugpile-edit-task-view.org
@@ -1,9 +1,8 @@
-#+OPTIONS:    H:nil num:nil toc:nil \n:nil @:t ::t |:t ^:{} -:t f:t *:t TeX:t LaTeX:t skip:nil d:(HIDE) tags:not-in-toc
-#+OPTIONS:    author:nil email:nil creator:nil timestamp:nil
+#+OPTIONS:    H:nil num:nil toc:2 \n:nil @:t ::t |:t ^:{} -:t f:t *:t TeX:t LaTeX:t skip:nil d:(HIDE) tags:not-in-toc
 #+STARTUP:    align fold nodlcheck hidestars oddeven lognotestate hideblocks
 #+SEQ_TODO:   TODO(t) INPROGRESS(i) WAITING(w@) | DONE(d) CANCELED(c@)
 #+TAGS:       Write(w) Update(u) Fix(f) Check(c) noexport(n)
-#+TITLE:      Bugpile - A Bugtracker for Org Mode
+#+TITLE:      Bugpile - Edit Task
 #+AUTHOR:     Thorsten Jolitz
 #+EMAIL:      tj[at]data-driven[dot]de
 #+LANGUAGE:   en
@@ -29,14 +28,8 @@
 #   </div>
 # #+end_html
 
-/Bug-Reports and Feature-Requests for GNU Emacs Org Mode/
+/Edit an existing Task (Bug-Report or Feature-Request)/
 
-* Tasks (Bugs and Features)
-** [[http://localhost:8008/open-new-task][Open New Task]]
+* anchor                                                    :noexport:anchor:
 
-| How to write a good bug report    | [[http://localhost:8009/guidelines.html][guidelines]]    |
-| Report a bug or request a feature | [[http://localhost:8008/open-new-task][open new task]] |
 
-** [[http://localhost:8008/search-tasklist][Search Tasklist]]
-
-| Search and edit bug reports and feature requests | [[http://localhost:8008/search-tasklist][ search tasklist]] |
