commit to save some experiments with view  files and dynamic blocks, before cleaning up again.

--- a/view/take-action-on-selected-tasks/bugpile-view-take-action-on-selected-tasks.org
+++ b/view/take-action-on-selected-tasks/bugpile-view-take-action-on-selected-tasks.org
@@ -1,6 +1,6 @@
 #+OPTIONS:    H:nil num:nil toc:nil \n:nil @:t ::t |:t ^:{} -:t f:t *:t TeX:t LaTeX:t skip:nil d:(HIDE) tags:not-in-toc
 #+OPTIONS:    author:nil email:nil creator:nil timestamp:nil
-#+STARTUP:    align fold nodlcheck hidestars oddeven lognotestate hideblocks
+#+STARTUP:    align fold nodlcheck oddeven lognotestate hideblocks
 #+SEQ_TODO:   TODO(t) INPROGRESS(i) WAITING(w@) | DONE(d) CANCELED(c@)
 #+TAGS:       Write(w) Update(u) Fix(f) Check(c) noexport(n)
 #+TITLE:      Bugpile - Take Action on Selected Tasks
@@ -32,6 +32,32 @@
 /Select Tasks in the Result List/
 /and choose an Action to take on them/
 
-* anchor                                                    :noexport:anchor:
+* Task 
+  :PROPERTIES:
+  :ID:       2e4d1477-2ea2-400e-b937-14408d7e2285
+  :END:
+
+#+begin_src emacs-lisp
+(setq org-columns-default-format
+ "%40ITEM(Task) %TODO %object-foo %html-edit %TAGS")
+#+end_src
+
+#+BEGIN: columnview :hlines 1 :id dd369e45-c335-4d14-a8e0-06ae854aada3
+| Task   | TODO | object-foo | html-edit | TAGS      |
+|--------+------+------------+-----------+-----------|
+| *      |      |            |           |           |
+| ** bug | TODO | bug        | link      | :foo:bar: |
+| ** bug | TODO | task       | link      | :foo:bar: |
+| ** bug | TODO | bug        | button    | :foo:bar: |
+| ** bug | TODO | html       | button    | :foo:bar: |
+| ** bug | TODO | obj        | link      | :foo:bar: |
+| ** bug | TODO | bug        | link      | :foo:bar: |
+| ** bug | TODO | task       | button    | :foo:bar: |
+#+END:
 
 
+PS
+This does not work. How to specify a file for :id global? 
+#+BEGIN: columnview :hlines 1 :id global file:"/home/tj/git/bugpile/objects/bug-obj.org""
+
+#+END:
