--- a/view/bugpile-index.org
+++ b/view/bugpile-index.org
@@ -1,6 +1,6 @@
 #+OPTIONS:    H:nil num:nil toc:nil \n:nil @:t ::t |:t ^:{} -:t f:t *:t TeX:t LaTeX:t skip:nil d:(HIDE) tags:not-in-toc
 #+OPTIONS:    author:nil email:nil creator:nil timestamp:nil
-#+STARTUP:    align fold nodlcheck hidestars oddeven lognotestate hideblocks
+#+STARTUP:    align fold nodlcheck oddeven lognotestate hideblocks
 #+SEQ_TODO:   TODO(t) INPROGRESS(i) WAITING(w@) | DONE(d) CANCELED(c@)
 #+TAGS:       Write(w) Update(u) Fix(f) Check(c) noexport(n)
 #+TITLE:      Bugpile - A Bugtracker for Org Mode
