--- a/view/search-tasklist/bugpile-view-search-tasklist.org
+++ b/view/search-tasklist/bugpile-view-search-tasklist.org
@@ -32,6 +32,9 @@
 /Search the Tasks (Bug-Reports or Feature-Requests)/
 /stored in Bugpile/
 
-* anchor                                                    :noexport:anchor:
+* Search Tasklist
+  :PROPERTIES:
+  :ID:       c2ff8888-632d-4ecd-850d-af6f9c620098
+  :END:
 
 
